--- a/index.html
+++ b/index.html
@@ -237,18 +237,18 @@
 									</figcaption>
 								</figure>
 							</div>
-							<!-- <div class="col-lg-4 col-md-4 col-sm-6 portfolio-item text-center cat-web cat-dev" style="float:left">
+							<div class="col-lg-4 col-md-4 col-sm-6 portfolio-item text-center cat-web cat-dev" style="float:left">
 								<figure>
-									<img src="img/6315.jpg" class="img img-responsive" alt="portfolio Image"style="height:287px;">
+									<img src="img/note.jpg" class="img img-responsive" alt="portfolio Image"style="height:287px;width:400px">
 									<figcaption>
-										<h3 class="heading text-center txt-sm txt-n animated fadeInDownBig a-d-0-4">画布</h3>
+										<h3 class="heading text-center txt-sm txt-n animated fadeInDownBig a-d-0-4">记事本</h3>
 										<div class="ul ul-center"><span></span></div>
 										<div class="buttons">
-											<a href="http://xpf0206.github.io/huabu2/" target="_blank" class="animated fadeInLeftBig a-d-0-3 btn btn-circle btn-primary btn-lg social-btn border-btn social"><span class="fa fa-search"></span></a>
+											<a href="http://qq568468608.github.io/note2/index.html" target="_blank" class="animated fadeInLeftBig a-d-0-3 btn btn-circle btn-primary btn-lg social-btn border-btn social"><span class="fa fa-search"></span></a>
 										</div>
 									</figcaption>
 								</figure>
-							</div> -->
+							</div>
 						</div>
 					</div>
 				</div>
